@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.037.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.009.
 use strict;
 use warnings;
 
@@ -13,7 +13,6 @@ my %WriteMakefileArgs = (
     "ExtUtils::MakeMaker" => 0
   },
   "DISTNAME" => "Test-Deep-Filter",
-  "EXE_FILES" => [],
   "LICENSE" => "perl",
   "MIN_PERL_VERSION" => "5.006",
   "NAME" => "Test::Deep::Filter",
@@ -28,7 +27,7 @@ my %WriteMakefileArgs = (
   "TEST_REQUIRES" => {
     "ExtUtils::MakeMaker" => 0,
     "File::Spec" => 0,
-    "Test::More" => "0.89",
+    "Test::More" => 0,
     "Test::Tester" => "0.08"
   },
   "VERSION" => "0.001001",
@@ -44,7 +43,7 @@ my %FallbackPrereqs = (
   "File::Spec" => 0,
   "Test::Deep" => 0,
   "Test::Deep::Cmp" => 0,
-  "Test::More" => "0.89",
+  "Test::More" => 0,
   "Test::Tester" => "0.08",
   "parent" => 0,
   "strict" => 0,
