@@ -1,6 +1,12 @@
 Release history for Test-Deep-Filter
 
 {{$NEXT}}
+ - Bugfix: Avoid test failures under -Ddefault_inc_excludes_dot
+
+ [Dependencies::Stats]
+ - Dependencies changed since 0.001000, see misc/*.deps* for details
+ - develop: +3 ↑2 (suggests: ↑2)
+ - test: ↓1
 
 0.001000 2015-08-14T10:04:05Z a46add0
  - First version.
